 _____________________________________________________________________________
 
   Version 1.5.12
 _____________________________________________________________________________

 - Bug fixes:
   - Fixed problems with temporary pawns in the Relationships tab

 _____________________________________________________________________________
 
   Version 1.5.11
 _____________________________________________________________________________

 - Added some missing implants (tentacles, etc.)
 - Bug fixes:
   - Pawns can no longer add implants that are mutant-specific or restricted
     if their mutant type does not match
   - Fixed some errors when trying to open the Bionics and Implants dialog
     when using some mods
   - Removed the implant level slider when the implant only has one level

 _____________________________________________________________________________
 
   Version 1.5.10
 _____________________________________________________________________________

 - Fixed missing animals from the equipment selection panel

 _____________________________________________________________________________
 
   Version 1.5.9
 _____________________________________________________________________________

 - Fixed problem loading older preset save files

 _____________________________________________________________________________
 
   Version 1.5.8
 _____________________________________________________________________________

 - Added support for Mechanitor implants in the Health panel's Implants and
   Bionics dialog
 - Added Mechanoid options to the Equipment Tab 
 - Bug fixes:
   - Fixed issue where sibling relationships were sometimes lost when loading
     from a preset
   - Fixed issue where non-parent/child relationships between starting pawns
     and hidden/world pawns were removed when initializing the game

 _____________________________________________________________________________
 
   Version 1.5.7